<resources>
    <string name="app_name">First_Android</string>
    <string name="equals_button">=</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="multiple_button">*</string>
    <string name="divide_button">/</string>
    <string name="prozent_button">%</string>
    <string name="plus_minus_button">+/-</string>
    <string name="ac_button">AC</string>
    <string name="komma_button">,</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
</resources>
