<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/resultTextView"
            android:layout_width="393dp"
            android:layout_height="112dp"
            android:gravity="end"
            android:textSize="80sp"
            android:textColor="@color/black"
            android:padding="8dp"
            android:text="@string/button_0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="104dp"
            app:layout_constraintHorizontal_bias="0.428"/>
    <Button
            android:text="@string/equals_button"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/equals_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.926"
            android:layout_marginBottom="40dp"
            android:onClick="onEqualsClick"/>
    <Button
            android:text="@string/komma_button"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:id="@+id/numKomma"
            android:textSize="35sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            android:layout_marginBottom="40dp"/>
    <Button
            android:text="@string/ac_button"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="25sp"
            android:id="@+id/clear_button"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            android:layout_marginBottom="376dp"
            android:onClick="onClearClick"/>
    <Button
            android:text="@string/prozent_button"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/nol16"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            android:layout_marginBottom="376dp"/>
    <Button
            android:text="@string/divide_button"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/divide_button"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.926"
            android:layout_marginBottom="376dp"
            android:onClick="onOperatorClick"/>
    <Button
            android:text="@string/plus_minus_button"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="25sp"
            android:id="@+id/nol15"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.347"
            android:layout_marginBottom="376dp"/>
    <Button
            android:text="@string/button_8"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/num8"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.347"
            android:layout_marginBottom="292dp"
            android:onClick="onNumberClick"/>
    <Button
            android:text="@string/button_9"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/num9"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            android:layout_marginBottom="292dp"
            android:onClick="onNumberClick"/>
    <Button
            android:text="@string/button_7"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/num7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            android:layout_marginBottom="292dp"
            android:onClick="onNumberClick"/>
    <Button
            android:text="@string/multiple_button"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/multiple_button"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.926"
            android:layout_marginBottom="292dp"
            android:onClick="onOperatorClick"/>
    <Button
            android:text="@string/button_5"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/num5"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.347"
            android:layout_marginBottom="208dp"
            android:onClick="onNumberClick"/>
    <Button
            android:text="@string/button_6"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/num6"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            android:layout_marginBottom="208dp"
            android:onClick="onNumberClick"/>
    <Button
            android:text="@string/button_4"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/num4"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            android:layout_marginBottom="208dp"
            android:onClick="onNumberClick"/>
    <Button
            android:text="@string/minus_button"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/minus_button"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.926"
            android:layout_marginBottom="208dp"
            android:onClick="onOperatorClick"/>
    <Button
            android:text="@string/button_3"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/num3"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            android:layout_marginBottom="124dp"
            android:onClick="onNumberClick"/>
    <Button
            android:text="@string/button_2"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/num2"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.347"
            android:layout_marginBottom="124dp"
            android:onClick="onNumberClick"/>
    <Button
            android:text="@string/button_1"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/num1"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            android:layout_marginBottom="124dp"
            android:onClick="onNumberClick"/>
    <Button
            android:text="@string/plus_button"
            android:layout_width="83dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/plus_button"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.926"
            android:layout_marginBottom="124dp"
            android:onClick="onOperatorClick"/>
    <Button
            android:text="@string/button_0"
            android:layout_width="179dp"
            android:layout_height="69dp"
            android:textSize="35sp"
            android:id="@+id/num0"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            android:layout_marginBottom="40dp"
            android:onClick="onNumberClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>